--- a/Avaliação Netflix NOVA.ipynb
+++ b/Avaliação Netflix NOVA.ipynb
@@ -545,30 +545,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "dic = {}\n",
-    "avaliacoes = {}\n",
-    "with open (\"combined_data_1.txt\") as f:\n",
-    "    for linha in f:\n",
-    "        aval = []\n",
-    "        if \":\" in linha:\n",
-    "            filme  = linha[:-1]\n",
-    "            dic[filme]=[]\n",
-    "        else:\n",
-    "            aval.append(float(linha.split(\",\")[1]))\n",
-    "            #dic[filme].append(float(linha.split(\",\")[1]))\n",
-    "        media = np.mean(aval)\n",
-    "        avaliacoes[filme] = media"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": true
@@ -618,6 +594,39 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#import numpy as np\n",
+    "#dic = {}\n",
+    "#avaliacoes = {}\n",
+    "#with open (\"combined_data_1.txt\") as f:\n",
+    " #   for linha in f:\n",
+    "#      aval = []\n",
+    "#        if \":\" in linha:\n",
+    "#            filme  = linha[:-1]\n",
+    "#            dic[filme]=[]\n",
+    "#        else:\n",
+    "#            aval.append(float(linha.split(\",\")[1]))\n",
+    "#            #dic[filme].append(float(linha.split(\",\")[1]))\n",
+    "#        media = np.mean(aval)\n",
+    "#        avaliacoes[filme] = media"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "##### A partir da regressão linear, que estima um valor y (a nota de um filme) a partir de alguns valores x (as notas dos outros 3 filmes) obtivemos que....."
+   ]
   },
   {
    "cell_type": "code",
